--- a/WebApp/Views/Job/_EditJobModal.cshtml
+++ b/WebApp/Views/Job/_EditJobModal.cshtml
@@ -159,6 +159,7 @@
                         </div>
                     </div>
                     <input asp-for="JobId" type="hidden" value="@Model.JobId" />
+                    <input asp-for="PostedById" type="hidden" value="@Model.PostedById" />
                 </form>
             </div>
 
