basic Application Mapping and Frontend Placeholders

--- a/WebApp/Views/Home/FeaturedJobs.cshtml
+++ b/WebApp/Views/Home/FeaturedJobs.cshtml
@@ -63,7 +63,7 @@ else
                                 {
                                     @foreach (var skill in job.Skills)
                                     {
-                                        <span class="rounded-full border px-2 py-1 text-xs">@skill.Name</span>
+                                        <span class="rounded-full border px-2 py-1 text-gray-500 text-xs">@skill.Name</span>
                                     }
                                 }
                                 else
