--- a/WebApp/Views/Job/IndexApplicant.cshtml
+++ b/WebApp/Views/Job/IndexApplicant.cshtml
@@ -151,12 +151,12 @@
                                         {
                                             foreach(var skill in job.Skills)
                                             {
-                                               <span class="rounded-full border px-2 py-1 text-xs">@skill.Name.ToUpper()</span> 
+                                               <span class="rounded-full border px-2 py-1 text-gray500 text-xs">@skill.Name.ToUpper()</span> 
                                             }
                                         }
                                         else
                                         {
-                                            <text>No skills listed.</text>
+                                            <span class="text-xs text-gray-500">No skills listed.</span>
                                         }
                                     </div>
 
