--- a/WebApp/Views/Job/ViewJob.cshtml
+++ b/WebApp/Views/Job/ViewJob.cshtml
@@ -21,7 +21,7 @@
     var Skills = ViewBag.Skills as List<Skill>;
 }
 
-<div class="min-h-screen bg-gray-100 text-black">
+<div class="min-h-screen bg-gray-100 text-black mt-8">
     <div class="mx-auto mt-10 flex max-w-7xl gap-6 rounded-lg bg-gray-100 px-6">
         <div class="w-full justify-between">
             <div class="w-full rounded-lg bg-white p-6 px-12 shadow-sm">
