--- a/WebApp/Views/Account/Login.cshtml
+++ b/WebApp/Views/Account/Login.cshtml
@@ -59,7 +59,7 @@
             <div>
                 <button type="submit" id="loginButton" disabled
                         class="mt-2 flex w-full items-center justify-center rounded bg-[#7A1515] px-4 py-2 font-semibold text-white hover:bg-[#7A1515] disabled:bg-gray-400 disabled:cursor-not-allowed">
-                    Sign in
+                    Sign In
                 </button>
             </div>
         </form>
