--- a/WebApp/Views/Shared/_Sidebar.cshtml
+++ b/WebApp/Views/Shared/_Sidebar.cshtml
@@ -58,7 +58,7 @@
                 </a>
             </li>
             <li class="bg-[#F5F7F8] py-2">
-                <a asp-action="" asp-controller=""
+                <a asp-action="GetAllApplicationsAdmin" asp-controller="Application"
                    class="flex items-center rounded px-2 py-1 text-[#7A1515] transition duration-200 hover:text-[#991b1b] hover:bg-gray-200">
                     <i class="fa fa-check-circle-o mr-2"></i>
                     Applications
@@ -69,11 +69,11 @@
         {
                 <li class="bg-[#F5F7F8] py-2">
                 <a asp-action="GetCompanyRecruiter" asp-controller="Company"
-           class="flex items-center rounded px-2 py-1 text-[#7A1515] transition duration-200 hover:text-[#991b1b] hover:bg-gray-200">
-            <i class="fa fa-building mr-2"></i>
-            Company
-        </a>
-    </li>
+                   class="flex items-center rounded px-2 py-1 text-[#7A1515] transition duration-200 hover:text-[#991b1b] hover:bg-gray-200">
+                    <i class="fa fa-building mr-2"></i>
+                    Company
+                </a>
+            </li>
             <li class="bg-[#F5F7F8] py-2">
                 <a asp-action="GetAllJobsRecruiter" asp-controller="Job"
                    class="flex items-center rounded px-2 py-1 text-[#7A1515] transition duration-200 hover:text-[#991b1b] hover:bg-gray-200">
